--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <script>
         user={};
-        user.name = "John"; 
+        user.name = "John";
+        user.surname = "Smith";
     </script>
 </body>
 </html>
