--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         user={};
         user.name = "John";
         user.surname = "Smith";
+        user.name = "Pete"; 
     </script>
 </body>
 </html>
