--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         user.name = "John";
         user.surname = "Smith";
         user.name = "Pete"; 
+        delete user.name;
     </script>
 </body>
 </html>
