Второе задание по количеству заданий

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 </head>
 <body>
     <script>
-        user={};
-        user.name = "John";
-        user.surname = "Smith";
-        user.name = "Pete"; 
-        delete user.name;
+        function isEmpty(obj){ 
+            for(let key in obj) 
+            { 
+                return false; 
+            } 
+            return true;
+            } 
+            let schedule = {}; 
+            alert(isEmpty(schedule)); 
+            schedule["8:30"] ="get up"; 
+            alert(isEmpty(schedule));
+            summ=0; 
     </script>
 </body>
 </html>
