--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <script>
-         let summa = 0;
-        let salaries = {John: 100, Ann: 160, Pete: 130}; 
-        for(let key in salaries) 
-        {
-            summa += salaries[key]; 
-        } 
-        console.log(summa); 
+        let menu = {width: 200, height: 300, title: "My menu"} 
+        function multiplyNumeric(obj){ 
+            for(let key in obj) 
+            { 
+                obj[key]=obj[key]*2; 
+                console.log(obj);
+            } 
+        }
+        console.log(multiplyNumeric(menu));
     </script>
 </body>
 </html>
